--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,38 @@
-torch>=2
-torchopt
 matplotlib
+ipykernel==6.25.2
+ipython==8.15.0
+ipywidgets==8.1.2
+Jinja2==3.1.4
+joblib==1.4.2
+jupyter_client==8.3.1
+jupyter_core==5.3.1
+jupyterlab_widgets==3.0.10
+kanaries_track==0.0.4
+keras==2.15.0
+kiwisolver==1.4.5
+lazy-object-proxy==1.9.0
+libclang==16.0.6
+Markdown==3.5.2
+markdown-it-py==3.0.0
+MarkupSafe==2.1.3
+matplotlib==3.8.2
+matplotlib-inline==0.1.6
+numpy==1.26.0
+pandas==2.2.0
+plotly==5.22.0
+pylint==2.17.5
+pytest==7.4.4
+scikit-learn==1.5.0
+scipy==1.12.0
+seaborn==0.13.2
+tensorboard==2.15.1
+tensorboard-data-server==0.7.2
+tensorflow==2.15.0
+tensorflow-estimator==2.15.0
+tensorflow-intel==2.15.0
+tensorflow-io-gcs-filesystem==0.31.0
+torch==2.2.0
+torchaudio==2.2.0
+torchopt==0.7.3
+torchvision==0.17.0
+pysindy
